# copilot_mcp_tool

./: .gitmodules  Cargo.toml  README.md  build.ps1  output.txt  plan.md  setup_build_env.ps1  test.ps1
plugins/mcp_oauth_plugin/: Cargo.toml
plugins/mcp_oauth_plugin/src/: handlers.rs  lib.rs  oauth.rs  token_store.rs
plugins/mcpdesk_obs_plugin/: Cargo.toml
plugins/mcpdesk_obs_plugin/src/: lib.rs
services/rustdesk_mcp_service/src/: main.rs  rustdesk_integration.rs
solfunmeme-core/: Cargo.toml
solfunmeme-core/src/: lib.rs
solfunmeme-loader/: Cargo.toml
solfunmeme-loader/src/: lib.rs
solfunmeme-ui/: Cargo.toml
solfunmeme-ui/src/: lib.rs
src/: client.rs  copilot.rs  level2_tool_module.rs  level3_tool_module.rs  lib.rs  main.rs  system_commands.rs  tool_server_module.rs
templates/: index.html
tests/wry_pane/wry_app_test/: Cargo.toml
tests/wry_pane/wry_app_test/src/: main.rs
tool_server/: Cargo.toml
tool_server/src/: main.rs
