[package]
name = "copilot_mcp_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { path = "rmcp-sdk/crates/rmcp", features = ["server","transport-io","macros", "client", "transport-child-process", "transport-async-rw"] }
tokio = { version = "1.35", features = ["full", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.77"
copilot-client = { path = "copilot-client.rs" }
async-openai = "0.19.0"
dotenv = "0.15"
anyhow = "1.0"
schemars = { version = "1.0", features = ["derive", "chrono04"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }
tera = "1"
lazy_static = "1.4"
sysinfo = "0.37.2"
futures = "0.3.31"
# New dependencies from rustdesk_mcp_service
log = "0.4"
env_logger = "0.11" # Added for env_logger::init() in main.rs
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "mcp_web_client"
path = "src/bin/mcp_web_client.rs"

# [[bin]]
# name = "rustdesk_mcp_service"
# path = "services/rustdesk_mcp_service/src/main.rs"

[workspace]
members = [
    "plugins/mcpdesk_obs_plugin",
    "rustdesk",
    "muda",
    "tray-icon" # Added tray-icon to workspace members
, "tests/wry_pane/wry_app_test"]
exclude = [
    "dioxus"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
homepage = "https://example.com"
license = "MIT"
repository = "https://github.com/rustdesk/rustdesk"

[workspace.dependencies]

rmcp-macros = { path = "rmcp-sdk/crates/rmcp-macros" }




# Dioxus core crates

dioxus = { path = "dioxus/packages/dioxus", version = "0.7.1" }

dioxus-core = { path = "dioxus/packages/core", version = "0.7.1" }

dioxus-core-types = { path = "dioxus/packages/core-types", version = "0.7.1" }

dioxus-core-macro = { path = "dioxus/packages/core-macro", version = "0.7.1" }

dioxus-config-macro = { path = "dioxus/packages/config-macro", version = "0.7.1" }

dioxus-router = { path = "dioxus/packages/router", version = "0.7.1" }

dioxus-router-macro = { path = "dioxus/packages/router-macro", version = "0.7.1" }

dioxus-document = { path = "dioxus/packages/document", version = "0.7.1", default-features = false }

dioxus-history = { path = "dioxus/packages/history", version = "0.7.1", default-features = false }

dioxus-html = { path = "dioxus/packages/html", version = "0.7.1", default-features = false }

dioxus-html-internal-macro = { path = "dioxus/packages/html-internal-macro", version = "0.7.1" }

dioxus-hooks = { path = "dioxus/packages/hooks", version = "0.7.1" }

dioxus-web = { path = "dioxus/packages/web", version = "0.7.1", default-features = false }

dioxus-ssr = { path = "dioxus/packages/ssr", version = "0.7.1", default-features = false }

dioxus-desktop = { path = "dioxus/packages/dioxus-desktop", version = "0.7.1", default-features = false }

dioxus-interpreter-js = { path = "dioxus/packages/interpreter", version = "0.7.1" }

dioxus-liveview = { path = "dioxus/packages/liveview", version = "0.7.1" }

dioxus-autofmt = { path = "dioxus/packages/autofmt", version = "0.7.1" }

dioxus-check = { path = "dioxus/packages/check", version = "0.7.1" }

dioxus-rsx = { path = "dioxus/packages/rsx", version = "0.7.1" }

dioxus-rsx-hotreload = { path = "dioxus/packages/rsx-hotreload", version = "0.7.1" }

dioxus-rsx-rosetta = { path = "dioxus/packages/rsx-rosetta", version = "0.7.1" }

dioxus-signals = { path = "dioxus/packages/signals", version = "0.7.1" }

dioxus-stores = { path = "dioxus/packages/stores", version = "0.7.1" }

dioxus-stores-macro = { path = "dioxus/packages/stores-macro", version = "0.7.1" }

dioxus-devtools = { path = "dioxus/packages/devtools", version = "0.7.1" }

dioxus-devtools-types = { path = "dioxus/packages/devtools-types", version = "0.7.1" }

dioxus-fullstack = { path = "dioxus/packages/fullstack", version = "0.7.1", default-features = false }

dioxus-fullstack-core = { path = "dioxus/packages/fullstack-core", version = "0.7.1", default-features = false }

dioxus-fullstack-macro = { path = "dioxus/packages/fullstack-macro", version = "0.7.1", default-features = false }

dioxus-server = { path = "dioxus/packages/fullstack-server", version = "0.7.1" }

dioxus-dx-wire-format = { path = "dioxus/packages/dx-wire-format", version = "0.7.1" }

dioxus-logger = { path = "dioxus/packages/logger", version = "0.7.1" }

dioxus-native = { path = "dioxus/packages/native", version = "0.7.1" }

dioxus-native-dom = { path = "dioxus/packages/native-dom", version = "0.7.1" }

dioxus-asset-resolver = { path = "dioxus/packages/asset-resolver", version = "0.7.1" }

dioxus-config-macros = { path = "dioxus/packages/config-macros", version = "0.7.1" }

dioxus-component-manifest = { path = "dioxus/packages/component-manifest", version = "0.7.1" }



generational-box = { path = "dioxus/packages/generational-box", version = "0.7.1" }

lazy-js-bundle = { path = "dioxus/packages/lazy-js-bundle", version = "0.7.1" }



# cli

dioxus-cli-opt = { path = "dioxus/packages/cli-opt", version = "0.7.1" }

dioxus-cli-telemetry = { path = "dioxus/packages/cli-telemetry", version = "0.7.1" }

dioxus-cli-config = { path = "dioxus/packages/cli-config", version = "0.7.1" }



# const-serializea

const-serialize = { path = "dioxus/packages/const-serialize", version = "0.7.1" }

const-serialize-macro = { path = "dioxus/packages/const-serialize-macro", version = "0.7.1" }



# subsecond

subsecond-types = { path = "dioxus/packages/subsecond/subsecond-types", version = "0.7.1" }

subsecond = { path = "dioxus/packages/subsecond/subsecond", version = "0.7.1" }



# manganis

manganis = { path = "dioxus/packages/manganis/manganis", version = "0.7.1" }

manganis-core = { path = "dioxus/packages/manganis/manganis-core", version = "0.7.1" }

manganis-macro = { path = "dioxus/packages/manganis/manganis-macro", version = "0.7.1" }



# wasm-split

wasm-splitter = { path = "dioxus/packages/wasm-split/wasm-split", version = "0.7.1" }

wasm-split-macro = { path = "dioxus/packages/wasm-split/wasm-split-macro", version = "0.7.1" }

wasm-split-cli = { path = "dioxus/packages/wasm-split/wasm-split-cli", version = "0.7.1" }

wasm-used = { path = "dioxus/packages/wasm-split/wasm-used", version = "0.7.1" }



depinfo = { path = "dioxus/packages/depinfo", version = "0.7.1" }

warnings = { version = "0.2.1" }



# blitz

blitz-dom = { version = "0.2.4", default-features = false }

blitz-net = { version = "0.2" }

blitz-html = { version = "0.2" }

blitz-paint = { version = "0.2" }

blitz-traits = { version = "0.2" }

blitz-shell = { version = "0.2", default-features = false }

anyrender = { version = "0.6.2", default-features = false }

anyrender_vello = { version = "0.6", default-features = false }

anyrender_vello_cpu = { version = "0.8", default-features = false }

wgpu_context = { version = "0.1", default-features = false }

wgpu = { version = "26.0" }

vello = "0.6"

bevy = "0.17"





# a fork of pretty please for tests - let's get off of this if we can!

prettier-please = { version = "0.3.0", features = ["verbatim"] }

anyhow = "1.0.98"

clap = { version = "4.5.40" }

askama_escape = "0.13.0"

tracing = "0.1.41"

tracing-futures = "0.2.5"

tracing-subscriber = { version = "0.3.19", default-features = false }

toml = "0.8"

tokio = "1.48"

tokio-util = { version = "0.7.15" }

tokio-stream = "0.1.17"

slab = "0.4.10"

slotmap = { version = "1.0.7", features = ["serde"] }

futures = "0.3.31"

futures-channel = "0.3.31"

futures-util = { version = "0.3", default-features = false }

rustc-hash = "2.1.1"

wasm-bindgen = "0.2.105"

wasm-bindgen-futures = "0.4.50"

js-sys = "0.3"

web-sys = { version = "0.3.77", default-features = false }

html_parser = "0.7.0"

thiserror = "2.0.12"

prettyplease = { version = "0.2.35", features = ["verbatim"] }

const_format = "0.2.34"

cargo_toml = { version = "0.22.1" }

tauri-utils = { version = "=2.5.0" }

tauri-macos-sign = { version = "=2.2.0" }

tauri-bundler = { version = "=2.5.0" }

lru = "0.16.0"

async-trait = "0.1.88"

axum = { version = "0.8.4", default-features = false }

axum-server = { version = "0.7.3", default-features = false }

http-body = { version = "1.0" }

tower = "0.5.2"

http = "1.3.1"

notify = "8.1.0"

tower-http = "0.6.6"

hyper = "1.6.0"

hyper-rustls = { version = "0.27.7", default-features = false, features = [

    "native-tokio",

    "http1",

    "http2",

    "tls12",

    "logging",

    "ring",

] }

rustls = { version = "0.23.28", default-features = false, features = [

    "logging",

    "std",

    "tls12",

    "ring",

] }

serde_json = "1.0.140"

serde = "1.0.219"

syn = "2.0"

quote = "1.0"

axum-core = "0.5"

proc-macro2 = "1.0.101"

axum_session = "0.16.0"

axum_session_auth = "0.16.0"

axum_session_sqlx = "0.5.0"

axum-extra = "0.10.1"

reqwest = { version = "0.12.23", default-features = false }

owo-colors = "4.2.2"

ciborium = "0.2.2"

base64 = "0.22.1"

uuid = "1.17.0"

convert_case = "0.8.0"

tungstenite = { version = "0.27.0" }

tokio-tungstenite = { version = "0.27.0" }

gloo-timers = "0.3.0"

internment = "0.8.6"

proc-macro2-diagnostics = { version = "0.10", default-features = false }

env_logger = "0.11.8"

chrono = "0.4.39"

rustversion = "1.0.21"

rand = "0.9"

longest-increasing-subsequence = "0.1.0"

trybuild = "1.0"

dirs = "6.0.0"

cargo-config2 = "0.1.34"

criterion = "0.6"

cargo_metadata = "0.19.2"

parking_lot = "0.12.4"

tracing-wasm = "0.2.1"

base16 = "0.2.1"

digest = "0.10.7"

sha2 = "0.10.9"

walrus = { version = "0.23.3", features = ["parallel"] }

id-arena = "2.2.1"

async-compression = { version = "0.4", features = [

    "futures-io",

    "gzip",

    "brotli",

] }

getrandom = "0.3.3"

async-once-cell = "0.5.4"

rayon = "1.10.0"

wasmparser = "0.235.0"

itertools = "0.14.0"

object = "0.37.1"

inventory = "0.3"

macro-string = "0.1.4"

walkdir = "2.5.0"

url = "2"

data-url = "0.3.2"

separator = "0.4.1"

pretty_assertions = "1"

serde_repr = "0.1"

hyper-util = "0.1"

krates = "0.17.5"

libloading = "0.8.8"

libc = "0.2.174"

memmap2 = "0.9.5"

memfd = "0.6.4"

xxhash-rust = { version = "0.8.15", default-features = false }

serde_qs = "0.15.0"

multer = "3.1.0"

const-str = "0.7.0"

bytes = "1.10"

send_wrapper = "0.6.0"

pin-project = "1.1.10"

postcard = { version = "1.1.3", default-features = false }

serde_urlencoded = "0.7"

form_urlencoded = "1.2.1"



# desktop

wry = { version = "0.53.5", default-features = false }

tao = { version = "0.34.0", features = ["rwh_05"] }

infer = "0.19.0"

dunce = "1.0.5"

percent-encoding = "2.3.1"

muda = { workspace = true } # Changed to workspace = true
tray-icon = { version = "0.21.0" } # Reverted to original version string

open = "5.3.2"

webbrowser = "1.0"



# web

gloo-dialogs = "0.2.0"



# tui stuff

ansi-to-tui = "7.0"

ansi-to-html = "0.2.2"

path-absolutize = "3.1"

crossterm = "0.29.0"

ratatui = "0.29.0"

shell-words = "1.1.0"



# native

keyboard-types = { version = "0.7", default-features = false }

winit = { version = "0.30.11", features = ["rwh_06"] }

[patch.crates-io]
muda = { path = "muda" }
