[package]
name = "copilot_mcp_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { path = "rmcp-sdk/crates/rmcp", features = ["server","transport-io","macros", "client", "transport-child-process", "transport-async-rw"] }
tokio = { version = "1.35", features = ["full", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.77"
copilot-client = { path = "copilot-client.rs" }
async-openai = "0.19.0"
dotenv = "0.15"
anyhow = "1.0"
schemars = { version = "1.0", features = ["derive", "chrono04"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }
tera = "1"
lazy_static = "1.4"
sysinfo = "0.37.2"
futures = "0.3.31"
# New dependencies from rustdesk_mcp_service
log = "0.4"
env_logger = "0.11" 
uuid = { version = "1.0", features = ["v4"] }
solfunmeme-ui = { path = "./solfunmeme-ui" } # Added dependency

[[bin]]
name = "mcp_web_client"
path = "src/bin/mcp_web_client.rs"

# [[bin]]
# name = "rustdesk_mcp_service"
# path = "services/rustdesk_mcp_service/src/main.rs"

[workspace]
members = [
    "plugins/mcpdesk_obs_plugin",
    "rustdesk",
    "muda",
    "dioxus",
    "claude-code-mux",
    "tray-icon" # Added tray-icon to workspace members
, "tests/wry_pane/wry_app_test", "solfunmeme-core", "solfunmeme-ui"]
exclude = [
#    "dioxus"

    # "dioxus/packages/dioxus",
    # "dioxus/packages/core",
    # "dioxus/packages/core-types",
    # "dioxus/packages/cli",
    # "dioxus/packages/cli-opt",
    # "dioxus/packages/cli-config",
    # "dioxus/packages/cli-telemetry",
    # "dioxus/packages/core-types",
    # "dioxus/packages/core-macro",
    # "dioxus/packages/config-macro",
    # "dioxus/packages/router-macro",
    # "dioxus/packages/extension",
    # "dioxus/packages/router",
    # "dioxus/packages/html",
    # "dioxus/packages/html-internal-macro",
    # "dioxus/packages/hooks",
    # "dioxus/packages/web",
    # "dioxus/packages/ssr",
    # "dioxus/packages/desktop",
    # "dioxus/packages/interpreter",
    # "dioxus/packages/liveview",
    # "dioxus/packages/autofmt",
    # "dioxus/packages/check",
    # "dioxus/packages/config-macro",
    # "dioxus/packages/core-macro",
    # "dioxus/packages/core-types",
    # "dioxus/packages/core",
    # "dioxus/packages/desktop",
    # "dioxus/packages/devtools-types",
    # "dioxus/packages/devtools",
    # "dioxus/packages/dioxus",
    # "dioxus/packages/document",
    # "dioxus/packages/extension",
    # "dioxus/packages/fullstack",
    # "dioxus/packages/fullstack-core",
    # "dioxus/packages/fullstack-macro",
    # "dioxus/packages/fullstack-server",
    # "dioxus/packages/generational-box",
    # "dioxus/packages/history",
    # "dioxus/packages/hooks",
    # "dioxus/packages/html-internal-macro",
    # "dioxus/packages/html",
    # "dioxus/packages/interpreter",
    # "dioxus/packages/lazy-js-bundle",
    # "dioxus/packages/liveview",
    # "dioxus/packages/router-macro",
    # "dioxus/packages/router",
    # "dioxus/packages/rsx-hotreload",
    # "dioxus/packages/rsx-rosetta",
    # "dioxus/packages/rsx",
    # "dioxus/packages/signals",
    # "dioxus/packages/stores",
    # "dioxus/packages/stores-macro",
    # "dioxus/packages/ssr",
    # "dioxus/packages/lazy-js-bundle",
    # "dioxus/packages/cli-config",
    # "dioxus/packages/devtools",
    # "dioxus/packages/devtools-types",
    # "dioxus/packages/rsx-hotreload",
    # "dioxus/packages/const-serialize",
    # "dioxus/packages/const-serialize-macro",
    # "dioxus/packages/dx-wire-format",
    # "dioxus/packages/logger",
    # "dioxus/packages/config-macros",
    # "dioxus/packages/native",
    # "dioxus/packages/native-dom",
"dioxus/packages/asset-resolver",
    # "dioxus/packages/depinfo",
    # "dioxus/packages/component-manifest",

    # # CLI harnesses, all included
    # "dioxus/packages/cli-harnesses/*",

    # # Playwright tests
    # "dioxus/packages/playwright-tests/liveview",
    # "dioxus/packages/playwright-tests/web",
    # "dioxus/packages/playwright-tests/fullstack",
    # "dioxus/packages/playwright-tests/suspense-carousel",
    # "dioxus/packages/playwright-tests/nested-suspense",

    # # manganis
    # "dioxus/packages/manganis/manganis",
    # "dioxus/packages/manganis/manganis-core",
    # "dioxus/packages/manganis/manganis-macro",

    # # wasm-split
    # "dioxus/packages/wasm-split/wasm-split",
    # "dioxus/packages/wasm-split/wasm-split-macro",
    # "dioxus/packages/wasm-split/wasm-split-cli",
    # "dioxus/packages/wasm-split/wasm-used",

    # # subsecond
    # "dioxus/packages/subsecond/subsecond",
    # "dioxus/packages/subsecond/subsecond-types",
    # "dioxus/packages/subsecond/subsecond-tests/cross-tls-crate",
    # "dioxus/packages/subsecond/subsecond-tests/cross-tls-crate-dylib",
    # "dioxus/packages/subsecond/subsecond-tests/cross-tls-test",

    # Full project examples
    "dioxus/examples/01-app-demos/hackernews",
    "dioxus/examples/01-app-demos/ecommerce-site",
    "dioxus/examples/01-app-demos/bluetooth-scanner",
    "dioxus/examples/01-app-demos/file-explorer",
    "dioxus/examples/01-app-demos/hotdog",

    # Fullstack examples
    "dioxus/examples/07-fullstack/hello-world",
    "dioxus/examples/07-fullstack/router",
    "dioxus/examples/07-fullstack/desktop",
    "dioxus/examples/07-fullstack/auth",
    "dioxus/examples/07-fullstack/ssr-only",

    # Integrations
    "dioxus/examples/10-integrations/tailwind",
    "dioxus/examples/10-integrations/pwa",
    "dioxus/examples/10-integrations/wgpu-texture",
    "dioxus/examples/10-integrations/native-headless",
    "dioxus/examples/10-integrations/native-headless-in-bevy",
    "dioxus/examples/10-integrations/bevy",

    # Playwright tests
    "dioxus/packages/playwright-tests/liveview",
    "dioxus/packages/playwright-tests/web",
    "dioxus/packages/playwright-tests/web-routing",
    "dioxus/packages/playwright-tests/web-hash-routing",
    "dioxus/packages/playwright-tests/barebones-template",
    "dioxus/packages/playwright-tests/fullstack",
    "dioxus/packages/playwright-tests/fullstack-errors",
    "dioxus/packages/playwright-tests/fullstack-mounted",
    "dioxus/packages/playwright-tests/fullstack-spread",
    "dioxus/packages/playwright-tests/fullstack-routing",
    "dioxus/packages/playwright-tests/fullstack-hydration-order",
    "dioxus/packages/playwright-tests/suspense-carousel",
    "dioxus/packages/playwright-tests/nested-suspense",
    "dioxus/packages/playwright-tests/cli-optimization",
    "dioxus/packages/playwright-tests/wasm-split-harness",
    "dioxus/packages/playwright-tests/default-features-disabled",
    "dioxus/packages/playwright-tests/fullstack-error-codes", "dioxus/packages/playwright-tests/windows-headless",

]



[workspace.package]
edition = "2021"
version = "0.1.0"
homepage = "https://example.com"
license = "MIT"
repository = "https://github.com/rustdesk/rustdesk"

[workspace.dependencies]
rmcp-macros = { path = "rmcp-sdk/crates/rmcp-macros" }
dioxus = { path = "dioxus/packages/dioxus", version = "*" }

dioxus-core = { path = "dioxus/packages/core", version = "*" }

dioxus-core-types = { path = "dioxus/packages/core-types", version = "*" }

dioxus-core-macro = { path = "dioxus/packages/core-macro", version = "*" }

dioxus-config-macro = { path = "dioxus/packages/config-macro", version = "*" }

dioxus-router = { path = "dioxus/packages/router", version = "*" }

dioxus-router-macro = { path = "dioxus/packages/router-macro", version = "*" }

dioxus-document = { path = "dioxus/packages/document", version = "*", default-features = false }

dioxus-history = { path = "dioxus/packages/history", version = "*", default-features = false }

dioxus-html = { path = "dioxus/packages/html", version = "*", default-features = false }

dioxus-html-internal-macro = { path = "dioxus/packages/html-internal-macro", version = "*" }

dioxus-hooks = { path = "dioxus/packages/hooks", version = "*" }

dioxus-web = { path = "dioxus/packages/web", version = "*", default-features = false }

dioxus-ssr = { path = "dioxus/packages/ssr", version = "*", default-features = false }

dioxus-desktop = { path = "dioxus/packages/desktop", version = "*", default-features = false }

dioxus-interpreter-js = { path = "dioxus/packages/interpreter", version = "*" }

dioxus-liveview = { path = "dioxus/packages/liveview", version = "*" }

dioxus-autofmt = { path = "dioxus/packages/autofmt", version = "*" }

dioxus-check = { path = "dioxus/packages/check", version = "*" }

dioxus-rsx = { path = "dioxus/packages/rsx", version = "*" }

dioxus-rsx-hotreload = { path = "dioxus/packages/rsx-hotreload", version = "*" }

dioxus-rsx-rosetta = { path = "dioxus/packages/rsx-rosetta", version = "*" }

dioxus-signals = { path = "dioxus/packages/signals", version = "*" }

dioxus-stores = { path = "dioxus/packages/stores", version = "*" }

dioxus-stores-macro = { path = "dioxus/packages/stores-macro", version = "*" }

dioxus-devtools = { path = "dioxus/packages/devtools", version = "*" }

dioxus-devtools-types = { path = "dioxus/packages/devtools-types", version = "*" }

dioxus-fullstack = { path = "dioxus/packages/fullstack", version = "*", default-features = false }

dioxus-fullstack-core = { path = "dioxus/packages/fullstack-core", version = "*", default-features = false }

dioxus-fullstack-macro = { path = "dioxus/packages/fullstack-macro", version = "*", default-features = false }

dioxus-server = { path = "dioxus/packages/fullstack-server", version = "*" }

dioxus-dx-wire-format = { path = "dioxus/packages/dx-wire-format", version = "*" }

dioxus-logger = { path = "dioxus/packages/logger", version = "*" }

dioxus-native = { path = "dioxus/packages/native", version = "*" }

dioxus-native-dom = { path = "dioxus/packages/native-dom", version = "*" }

#dioxus-asset-resolver = { path = "dioxus/packages/asset-resolver", version = "*" }

dioxus-config-macros = { path = "dioxus/packages/config-macros", version = "*" }

dioxus-component-manifest = { path = "dioxus/packages/component-manifest", version = "*" }



generational-box = { path = "dioxus/packages/generational-box", version = "*" }

lazy-js-bundle = { path = "dioxus/packages/lazy-js-bundle", version = "*" }



# cli

dioxus-cli-opt = { path = "dioxus/packages/cli-opt", version = "*" }

dioxus-cli-telemetry = { path = "dioxus/packages/cli-telemetry", version = "*" }

dioxus-cli-config = { path = "dioxus/packages/cli-config", version = "*" }



# const-serializea

const-serialize = { path = "dioxus/packages/const-serialize", version = "*" }

const-serialize-macro = { path = "dioxus/packages/const-serialize-macro", version = "*" }



# subsecond

subsecond-types = { path = "dioxus/packages/subsecond/subsecond-types", version = "*" }

subsecond = { path = "dioxus/packages/subsecond/subsecond", version = "*" }



# manganis

manganis = { path = "dioxus/packages/manganis/manganis", version = "*" }

manganis-core = { path = "dioxus/packages/manganis/manganis-core", version = "*" }

manganis-macro = { path = "dioxus/packages/manganis/manganis-macro", version = "*" }



# wasm-split

wasm-splitter = { path = "dioxus/packages/wasm-split/wasm-split", version = "*" }

wasm-split-macro = { path = "dioxus/packages/wasm-split/wasm-split-macro", version = "*" }

wasm-split-cli = { path = "dioxus/packages/wasm-split/wasm-split-cli", version = "*" }

wasm-used = { path = "dioxus/packages/wasm-split/wasm-used", version = "*" }



depinfo = { path = "dioxus/packages/depinfo", version = "*" }

warnings = { version = "0.2.1" }



# blitz

blitz-dom = { version = "0.2.4", default-features = false }

blitz-net = { version = "0.2" }

blitz-html = { version = "0.2" }

blitz-paint = { version = "0.2" }

blitz-traits = { version = "0.2" }

blitz-shell = { version = "0.2", default-features = false }

anyrender = { version = "0.6.2", default-features = false }

anyrender_vello = { version = "0.6", default-features = false }

anyrender_vello_cpu = { version = "0.8", default-features = false }

wgpu_context = { version = "0.1", default-features = false }

wgpu = { version = "26.0" }

vello = "0.6"

bevy = "0.17"





# a fork of pretty please for tests - let's get off of this if we can!

prettier-please = { version = "0.3.0", features = ["verbatim"] }

anyhow = "1.0.98"

clap = { version = "4.5.40" }

askama_escape = "0.13.0"

tracing = "0.1.41"

tracing-futures = "0.2.5"

tracing-subscriber = { version = "0.3.19", default-features = false }

toml = "0.8"

tokio = "1.48"

tokio-util = { version = "0.7.15" }

tokio-stream = "0.1.17"

slab = "0.4.10"

slotmap = { version = "1.0.7", features = ["serde"] }

futures = "0.3.31"

futures-channel = "0.3.31"

futures-util = { version = "0.3", default-features = false }

rustc-hash = "2.1.1"

wasm-bindgen = "0.2.105"

wasm-bindgen-futures = "0.4.50"

js-sys = "0.3"

web-sys = { version = "0.3.77", default-features = false }

html_parser = "0.7.0"

thiserror = "2.0.12"

prettyplease = { version = "0.2.35", features = ["verbatim"] }

const_format = "0.2.34"

cargo_toml = { version = "0.22.1" }

tauri-utils = { version = "=2.5.0" }

tauri-macos-sign = { version = "=2.2.0" }

tauri-bundler = { version = "=2.5.0" }

lru = "0.16.0"

async-trait = "0.1.88"

axum = { version = "0.8.4", default-features = false }

axum-server = { version = "0.7.3", default-features = false }

http-body = { version = "1.0" }

tower = "0.5.2"

http = "1.3.1"

notify = "8.1.0"

tower-http = "0.6.6"

hyper = "1.6.0"

hyper-rustls = { version = "0.27.7", default-features = false, features = [

    "native-tokio",

    "http1",

    "http2",

    "tls12",

    "logging",

    "ring",

] }

rustls = { version = "0.23.28", default-features = false, features = [

    "logging",

    "std",

    "tls12",

    "ring",

] }

serde_json = "1.0.140"

serde = "1.0.219"

syn = "2.0"

quote = "1.0"

axum-core = "0.5"

proc-macro2 = "1.0.101"

axum_session = "0.16.0"

axum_session_auth = "0.16.0"

axum_session_sqlx = "0.5.0"

axum-extra = "0.10.1"

reqwest = { version = "0.12.23", default-features = false }

owo-colors = "4.2.2"

ciborium = "0.2.2"

base64 = "0.22.1"

uuid = "1.17.0"

convert_case = "0.8.0"

tungstenite = { version = "0.27.0" }

tokio-tungstenite = { version = "0.27.0" }

gloo-timers = "0.3.0"

internment = "0.8.6"

proc-macro2-diagnostics = { version = "0.10", default-features = false }

env_logger = "0.11.8"

chrono = "0.4.39"

rustversion = "1.0.21"

rand = "0.9"

longest-increasing-subsequence = "0.1.0"

trybuild = "1.0"

dirs = "6.0.0"

cargo-config2 = "0.1.34"

criterion = "0.6"

cargo_metadata = "0.19.2"

parking_lot = "0.12.4"

tracing-wasm = "0.2.1"

base16 = "0.2.1"

digest = "0.10.7"

sha2 = "0.10.9"

walrus = { version = "0.23.3", features = ["parallel"] }

id-arena = "2.2.1"

async-compression = { version = "0.4", features = [

    "futures-io",

    "gzip",

    "brotli",

] }

getrandom = "0.3.3"

async-once-cell = "0.5.4"

rayon = "1.10.0"

wasmparser = "0.235.0"

itertools = "0.14.0"

object = "0.37.1"

inventory = "0.3"

macro-string = "0.1.4"

walkdir = "2.5.0"

url = "2"

data-url = "0.3.2"

separator = "0.4.1"

pretty_assertions = "1"

serde_repr = "0.1"

hyper-util = "0.1"

krates = "0.17.5"

libloading = "0.8.8"

libc = "0.2.174"

memmap2 = "0.9.5"

memfd = "0.6.4"

xxhash-rust = { version = "0.8.15", default-features = false }

serde_qs = "0.15.0"

multer = "3.1.0"

const-str = "0.7.0"

bytes = "1.10"

send_wrapper = "0.6.0"

pin-project = "1.1.10"

postcard = { version = "1.1.3", default-features = false }

serde_urlencoded = "0.7"

form_urlencoded = "1.2.1"



# desktop

wry = { version = "0.53.5", default-features = false }

tao = { version = "0.34.0", features = ["rwh_05"] }

infer = "0.19.0"

dunce = "1.0.5"

percent-encoding = "2.3.1"

# bug report  if path=workspace in the workspace there should be an error 
muda = { path = "muda" } # Changed to workspace = true
tray-icon = { version = "0.21.0" } # Reverted to original version string

open = "5.3.2"

webbrowser = "1.0"



# web

gloo-dialogs = "0.2.0"



# tui stuff

ansi-to-tui = "7.0"

ansi-to-html = "0.2.2"

path-absolutize = "3.1"

crossterm = "0.29.0"

ratatui = "0.29.0"

shell-words = "1.1.0"



# native

keyboard-types = { version = "0.7", default-features = false }

winit = { version = "0.30.11", features = ["rwh_06"] }



# #[workspace.dependencies]
# dioxus = { path = "dioxus/packages/dioxus", version = "*" }
# dioxus-core = { path = "dioxus/packages/core", version = "*" }
# dioxus-core-types = { path = "dioxus/packages/core-types", version = "*" }
# dioxus-core-macro = { path = "dioxus/packages/core-macro", version = "*" }
# dioxus-config-macro = { path = "dioxus/packages/config-macro", version = "*" }
# dioxus-router = { path = "dioxus/packages/router", version = "*" }
# dioxus-router-macro = { path = "dioxus/packages/router-macro", version = "*" }
# dioxus-document = { path = "dioxus/packages/document", version = "*", default-features = false }
# dioxus-history = { path = "dioxus/packages/history", version = "*", default-features = false }
# dioxus-html = { path = "dioxus/packages/html", version = "*", default-features = false }
# dioxus-html-internal-macro = { path = "dioxus/packages/html-internal-macro", version = "*" }
# dioxus-hooks = { path = "dioxus/packages/hooks", version = "*" }
# dioxus-web = { path = "dioxus/packages/web", version = "*", default-features = false }
# dioxus-ssr = { path = "dioxus/packages/ssr", version = "*", default-features = false }
# dioxus-desktop = { path = "dioxus/packages/desktop", version = "*", default-features = false }
# dioxus-interpreter-js = { path = "dioxus/packages/interpreter", version = "*" }
# dioxus-liveview = { path = "dioxus/packages/liveview", version = "*" }
# dioxus-autofmt = { path = "dioxus/packages/autofmt", version = "*" }
# dioxus-check = { path = "dioxus/packages/check", version = "*" }
# dioxus-rsx = { path = "dioxus/packages/rsx", version = "*" }
# dioxus-rsx-hotreload = { path = "dioxus/packages/rsx-hotreload", version = "*" }
# dioxus-rsx-rosetta = { path = "dioxus/packages/rsx-rosetta", version = "*" }
# dioxus-signals = { path = "dioxus/packages/signals", version = "*" }
# dioxus-stores = { path = "dioxus/packages/stores", version = "*" }
# dioxus-stores-macro = { path = "dioxus/packages/stores-macro", version = "*" }
# dioxus-devtools = { path = "dioxus/packages/devtools", version = "*" }
# dioxus-devtools-types = { path = "dioxus/packages/devtools-types", version = "*" }
# dioxus-fullstack = { path = "dioxus/packages/fullstack", version = "*", default-features = false }
# dioxus-fullstack-core = { path = "dioxus/packages/fullstack-core", version = "*", default-features = false }
# dioxus-fullstack-macro = { path = "dioxus/packages/fullstack-macro", version = "*", default-features = false }
# dioxus-server = { path = "dioxus/packages/fullstack-server", version = "*" }
# dioxus-dx-wire-format = { path = "dioxus/packages/dx-wire-format", version = "*" }
# dioxus-logger = { path = "dioxus/packages/logger", version = "*" }
# dioxus-native = { path = "dioxus/packages/native", version = "*" }
# dioxus-native-dom = { path = "dioxus/packages/native-dom", version = "*" }
dioxus-asset-resolver = { path = "dioxus/packages/asset-resolver", version = "*" }
# dioxus-config-macros = { path = "dioxus/packages/config-macros", version = "*" }
# dioxus-component-manifest = { path = "dioxus/packages/component-manifest", version = "*" }

#generational-box = { path = "dioxus/packages/generational-box", version = "*" }
#lazy-js-bundle = { path = "dioxus/packages/lazy-js-bundle", version = "*" }

# # cli
# dioxus-cli-opt = { path = "dioxus/packages/cli-opt", version = "*" }
# dioxus-cli-telemetry = { path = "dioxus/packages/cli-telemetry", version = "*" }
# dioxus-cli-config = { path = "dioxus/packages/cli-config", version = "*" }

# # const-serializea
# const-serialize = { path = "dioxus/packages/const-serialize", version = "*" }
# const-serialize-macro = { path = "dioxus/packages/const-serialize-macro", version = "*" }

# # subsecond
# subsecond-types = { path = "dioxus/packages/subsecond/subsecond-types", version = "*" }
# subsecond = { path = "dioxus/packages/subsecond/subsecond", version = "*" }

# # manganis
# manganis = { path = "dioxus/packages/manganis/manganis", version = "*" }
# manganis-core = { path = "dioxus/packages/manganis/manganis-core", version = "*" }
# manganis-macro = { path = "dioxus/packages/manganis/manganis-macro", version = "*" }

# # wasm-split
# wasm-splitter = { path = "dioxus/packages/wasm-split/wasm-split", version = "*" }
# wasm-split-macro = { path = "dioxus/packages/wasm-split/wasm-split-macro", version = "*" }
# wasm-split-cli = { path = "dioxus/packages/wasm-split/wasm-split-cli", version = "*" }
# wasm-used = { path = "dioxus/packages/wasm-split/wasm-used", version = "*" }

# depinfo = { path = "dioxus/packages/depinfo", version = "*" }
# warnings = { version = "0.2.1" }

# # blitz
# blitz-dom = { version = "0.2.4", default-features = false }
# blitz-net = { version = "0.2" }
# blitz-html = { version = "0.2" }
# blitz-paint = { version = "0.2" }
# blitz-traits = { version = "0.2" }
# blitz-shell = { version = "0.2", default-features = false }
# anyrender = { version = "0.6.2", default-features = false }
# anyrender_vello = { version = "0.6", default-features = false }
# anyrender_vello_cpu = { version = "0.8", default-features = false }
# wgpu_context = { version = "0.1", default-features = false }
# wgpu = { version = "26.0" }
# vello = "0.6"
# bevy = "0.17"


# # a fork of pretty please for tests - let's get off of this if we can!
# prettier-please = { version = "0.3.0", features = ["verbatim"] }
# anyhow = "1.0.98"
# clap = { version = "4.5.40" }
# askama_escape = "0.13.0"
# tracing = "0.1.41"
# tracing-futures = "0.2.5"
# tracing-subscriber = { version = "0.3.19", default-features = false }
# toml = "0.8"
# tokio = "1.48"
# tokio-util = { version = "0.7.15" }
# tokio-stream = { version = "0.1.17" }
# slab = "0.4.10"
# slotmap = { version = "1.0.7", features = ["serde"] }
# futures = "0.3.31"
# futures-channel = "0.3.31"
# futures-util = { version = "0.3", default-features = false }
# rustc-hash = "2.1.1"
# wasm-bindgen = "0.2.105"
# wasm-bindgen-futures = "0.4.50"
# js-sys = "0.3"
# web-sys = { version = "0.3.77", default-features = false }
# html_parser = "0.7.0"
# thiserror = "2.0.12"
# prettyplease = { version = "0.2.35", features = ["verbatim"] }
# const_format = "0.2.34"
# cargo_toml = { version = "0.22.1" }
# tauri-utils = { version = "=2.5.0" }
# tauri-macos-sign = { version = "=2.2.0" }
# tauri-bundler = { version = "=2.5.0" }
# lru = "0.16.0"
# async-trait = "0.1.88"
# axum = { version = "0.8.4", default-features = false }
# axum-server = { version = "0.7.3", default-features = false }
# http-body = { version = "1.0" }
# tower = "0.5.2"
# http = "1.3.1"
# notify = { version = "8.1.0" }
# tower-http = "0.6.6"
# hyper = "1.6.0"
# hyper-rustls = { version = "0.27.7", default-features = false, features = [
#     "native-tokio",
#     "http1",
#     "http2",
#     "tls12",
#     "logging",
#     "ring",
# ] }
# rustls = { version = "0.23.28", default-features = false, features = [
#     "logging",
#     "std",
#     "tls12",
#     "ring",
# ] }
# serde_json = "1.0.140"
# serde = "1.0.219"
# syn = "2.0"
# quote = "1.0"
# axum-core = "0.5"
# proc-macro2 = "1.0.101"
# axum_session = "0.16.0"
# axum_session_auth = "0.16.0"
# axum_session_sqlx = "0.5.0"
# axum-extra = "0.10.1"
# reqwest = { version = "0.12.23", default-features = false }
# owo-colors = "4.2.2"
# ciborium = "0.2.2"
# base64 = "0.22.1"
# uuid = "1.17.0"
# convert_case = "0.8.0"
# tungstenite = { version = "0.27.0" }
# tokio-tungstenite = { version = "0.27.0" }
# gloo-timers = "0.3.0"
# internment = { version = "0.8.6" }
# proc-macro2-diagnostics = { version = "0.10", default-features = false }
# env_logger = "0.11.8"
# chrono = { version = "0.4.39" }
# rustversion = "1.0.21"
# rand = "0.9"
# longest-increasing-subsequence = "0.1.0"
# trybuild = "1.0"
# dirs = "6.0.0"
# cargo-config2 = "0.1.34"
# criterion = { version = "0.6" }
# cargo_metadata = "0.19.2"
# parking_lot = "0.12.4"
# tracing-wasm = "0.2.1"
# base16 = "0.2.1"
# digest = "0.10.7"
# sha2 = "0.10.9"
# walrus = { version = "0.23.3", features = ["parallel"] }
# id-arena = "2.2.1"
# async-compression = { version = "0.4", features = [
#     "futures-io",
#     "gzip",
#     "brotli",
# ] }
# getrandom = { version = "0.3.3" }
# async-once-cell = { version = "0.5.4" }
# rayon = "1.10.0"
# wasmparser = "0.235.0"
# itertools = "0.14.0"
# object = { version = "0.37.1" }
# inventory = { version = "0.3" }
# macro-string = "0.1.4"
# walkdir = "2.5.0"
# url = "2"
# data-url = "0.3.2"
# separator = "0.4.1"
# pretty_assertions = "1"
# serde_repr = "0.1"
# hyper-util = "0.1"
# krates = { version = "0.17.5" }
# libloading = "0.8.8"
# libc = "0.2.174"
# memmap2 = "0.9.5"
# memfd = "0.6.4"
# xxhash-rust = { version = "0.8.15", default-features = false }
# serde_qs = "0.15.0"
# multer = "3.1.0"
# const-str = "0.7.0"
# bytes = "1.10"
# send_wrapper = "0.6.0"
# pin-project = { version = "1.1.10" }
# postcard = { version = "1.1.3", default-features = false }
# serde_urlencoded = "0.7"
# form_urlencoded = "1.2.1"

# # desktop
# wry = { version = "0.53.5", default-features = false }
# tao = { version = "0.34.0", features = ["rwh_05"] }
# infer = "0.19.0"
# dunce = "1.0.5"
# percent-encoding = "2.3.1"
# muda = "0.17.0"
# tray-icon = "0.21.0"
# open = "5.3.2"
# webbrowser = "1.0"

# web
# gloo-dialogs = "0.2.0"

# # tui stuff
# ansi-to-tui = "7.0"
# ansi-to-html = "0.2.2"
# path-absolutize = "3.1"
# crossterm = { version = "0.29.0" }
# ratatui = { version = "0.29.0" }
# shell-words = "1.1.0"

# # native
# keyboard-types = { version = "0.7", default-features = false }
# winit = { version = "0.30.11", features = ["rwh_06"] }

# our release profile should be fast to compile and fast to run
# when we ship our CI builds, we turn on LTO which improves perf leftover by turning on incremental
[profile.release]
incremental = true

# crank up the opt level for wasm-split-cli in dev mode
# important here that lto is on and the debug symbols are present (since they're used by wasm-opt)
[profile.wasm-split-release]
inherits = "release"
opt-level = 'z'
lto = true
debug = true

# a profile for running the CLI that's also incremental
[profile.cli-release-dev]
inherits = "release"
opt-level = 3
incremental = true

# crank up walrus since it's quite slow in dev mode
[profile.dev.package.walrus]
opt-level = 3

[profile.release-max-opt]
inherits = "release"
lto = true
codegen-units = 1

# Disable debug assertions to check the released path of core and other packages, but build without optimizations to keep build times quick
[profile.release-unoptimized]
inherits = "dev"
debug-assertions = false
incremental = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[patch.crates-io]
muda = { path = "muda" }
